build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/skyla/Desktop/copy/FRC-6800-2023-code-everybot/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::TeleopPeriodic()':
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp:127:12: warning: unused variable 'sensLeft' [-Wunused-variable]
  127 |     double sensLeft = frc::SmartDashboard::GetNumber("Left Motor Limit", 1); //65%? 0.65
      |            ^~~~~~~~
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp:128:12: warning: unused variable 'sensRight' [-Wunused-variable]
  128 |     double sensRight = frc::SmartDashboard::GetNumber("Right Motor Limit", 1);
      |            ^~~~~~~~~
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp:152:12: warning: unused variable 'SQRTspeed' [-Wunused-variable]
  152 |     double SQRTspeed = sqrt(speed);
      |            ^~~~~~~~~
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp:153:12: warning: unused variable 'SQRTrotation' [-Wunused-variable]
  153 |     double SQRTrotation = sqrt(rotation);
      |            ^~~~~~~~~~~~
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::AutonomousPeriodic()':
C:\Users\skyla\Desktop\copy\FRC-6800-2023-code-everybot\src\main\cpp\Robot.cpp:437:36: error: 'fal' was not declared in this scope; did you mean 'hal'?
  437 |       m_robotDrive.TankDrive(0, 0, fal se);
      |                                    ^~~
      |                                    hal

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/skyla/Desktop/copy/FRC-6800-2023-code-everybot/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
